testCase/doc/logfile.txt
Class documentation
<---- javadoc command: ---->
C:\Program Files (x86)\Java\jdk1.8.0_91\bin\javadoc.exe
-author
-version
-nodeprecated
-package
-noindex
-notree
-nohelp
-nonavbar
-source
1.8
-classpath
C:\Program Files (x86)\BlueJ\lib\bluejcore.jar;C:\Program Files (x86)\BlueJ\lib\junit-4.8.2.jar;C:\Program Files (x86)\BlueJ\lib\userlib\pi4j-core.jar;C:\Program Files (x86)\BlueJ\lib\userlib\pi4j-device.jar;C:\Program Files (x86)\BlueJ\lib\userlib\pi4j-gpio-extension.jar;C:\Program Files (x86)\BlueJ\lib\userlib\pi4j-service.jar;C:\Users\p00607281\Desktop\testCase
-d
C:\Users\p00607281\Desktop\testCase\doc
-encoding
UTF-8
-charset
UTF-8
-docletpath
C:\Program Files (x86)\BlueJ\lib\bjdoclet.jar
-doclet
bluej.doclet.doclets.formats.html.HtmlDoclet
C:\Users\p00607281\Desktop\testCase\Test.java
<---- end of javadoc command ---->
Loading source file C:\Users\p00607281\Desktop\testCase\Test.java...
C:\Users\p00607281\Desktop\testCase\Test.java:1: error: <identifier> expected
import 
      ^
C:\Users\p00607281\Desktop\testCase\Test.java:2: error: <identifier> expected
public class Test
      ^
C:\Users\p00607281\Desktop\testCase\Test.java:2: error: ';' expected
public class Test
            ^
C:\Users\p00607281\Desktop\testCase\Test.java:3: error: class, interface, or enum expected
{
^
C:\Users\p00607281\Desktop\testCase\Test.java:5: error: class, interface, or enum expected
    public static void main()
                  ^
5 errors
